[metadata]
name = board_game_kurtispykes
version = 0.0.1
author = Kurtis Pykes
author_email = kurtispykes@gmail.com
description = Different board games created over time
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kurtispykes/board_games
project_urls =
    Bug Tracker = https://github.com/kurtispykes/board_games/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = tic_tac_toe
packages = find:
python_requires = >=3.8

[options.pckages.find]
where = tic_tac_toe